// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Organisation render a disabled field 1`] = `
<label id="organisationField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="organisation"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Organisation
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="organisation"
           name="organisation"
           placeholder="Enter your organisation"
           autocomplete="organization"
           data-trackable="organization"
           aria-required="true"
           required
           disabled
           value
    >
    <span class="o-forms-input__error">
      Please enter your organisation
    </span>
  </span>
</label>
`;

exports[`Organisation render a field with default error 1`] = `
<label id="organisationField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="organisation"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Organisation
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="organisation"
           name="organisation"
           placeholder="Enter your organisation"
           autocomplete="organization"
           data-trackable="organization"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please enter your organisation
    </span>
  </span>
</label>
`;

exports[`Organisation render a field with default settings 1`] = `
<label id="organisationField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="organisation"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Organisation
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="organisation"
           name="organisation"
           placeholder="Enter your organisation"
           autocomplete="organization"
           data-trackable="organization"
           aria-required="true"
           required
           value
    >
    <span class="o-forms-input__error">
      Please enter your organisation
    </span>
  </span>
</label>
`;

exports[`Organisation render a field with value 1`] = `
<label id="organisationField"
       class="o-forms-field ncf__validation-error"
       data-validate="required"
       for="organisation"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Organisation
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="organisation"
           name="organisation"
           placeholder="Enter your organisation"
           autocomplete="organization"
           data-trackable="organization"
           aria-required="true"
           required
           value="some value"
    >
    <span class="o-forms-input__error">
      Please enter your organisation
    </span>
  </span>
</label>
`;
